JumpScript/tests/baselines/reference/arithAssignTyping.errors.txt
tests/cases/compiler/arithAssignTyping.jump(3,1): error TS2539: Cannot assign to 'f' because it is not a variable.
tests/cases/compiler/arithAssignTyping.jump(4,1): error TS2539: Cannot assign to 'f' because it is not a variable.
tests/cases/compiler/arithAssignTyping.jump(5,1): error TS2539: Cannot assign to 'f' because it is not a variable.
tests/cases/compiler/arithAssignTyping.jump(6,1): error TS2539: Cannot assign to 'f' because it is not a variable.
tests/cases/compiler/arithAssignTyping.jump(7,1): error TS2539: Cannot assign to 'f' because it is not a variable.
tests/cases/compiler/arithAssignTyping.jump(8,1): error TS2539: Cannot assign to 'f' because it is not a variable.
tests/cases/compiler/arithAssignTyping.jump(9,1): error TS2539: Cannot assign to 'f' because it is not a variable.
tests/cases/compiler/arithAssignTyping.jump(10,1): error TS2539: Cannot assign to 'f' because it is not a variable.
tests/cases/compiler/arithAssignTyping.jump(11,1): error TS2539: Cannot assign to 'f' because it is not a variable.
tests/cases/compiler/arithAssignTyping.jump(12,1): error TS2539: Cannot assign to 'f' because it is not a variable.
tests/cases/compiler/arithAssignTyping.jump(13,1): error TS2539: Cannot assign to 'f' because it is not a variable.
tests/cases/compiler/arithAssignTyping.jump(14,1): error TS2539: Cannot assign to 'f' because it is not a variable.


==== tests/cases/compiler/arithAssignTyping.jump (12 errors) ====
    class f { }
    
    f += ''; // error
    ~
!!! error TS2539: Cannot assign to 'f' because it is not a variable.
    f += 1; // error
    ~
!!! error TS2539: Cannot assign to 'f' because it is not a variable.
    f -= 1; // error
    ~
!!! error TS2539: Cannot assign to 'f' because it is not a variable.
    f *= 1; // error
    ~
!!! error TS2539: Cannot assign to 'f' because it is not a variable.
    f /= 1; // error
    ~
!!! error TS2539: Cannot assign to 'f' because it is not a variable.
    f %= 1; // error
    ~
!!! error TS2539: Cannot assign to 'f' because it is not a variable.
    f &= 1; // error
    ~
!!! error TS2539: Cannot assign to 'f' because it is not a variable.
    f |= 1; // error
    ~
!!! error TS2539: Cannot assign to 'f' because it is not a variable.
    f <<= 1; // error
    ~
!!! error TS2539: Cannot assign to 'f' because it is not a variable.
    f >>= 1; // error
    ~
!!! error TS2539: Cannot assign to 'f' because it is not a variable.
    f >>>= 1; // error
    ~
!!! error TS2539: Cannot assign to 'f' because it is not a variable.
    f ^= 1; // error
    ~
!!! error TS2539: Cannot assign to 'f' because it is not a variable.